# cross-platform-rust

./: .gitignore  README.md
android/Toodle/: build.gradle
android/Toodle/app/: build.gradle
android/Toodle/app/src/main/: AndroidManifest.xml
android/Toodle/app/src/main/java/com/mozilla/toodle/: Item.java  ItemsCallback.java  ListAdapter.java  NewItemActivity.java  ToodleActivity.java  UiUtils.java
android/Toodle/app/src/main/java/com/mozilla/toodle/rust/: ColResultIterator.java  CollResult.java  CollResultHandler.java  JNA.java  NativeAttributeList.java  NativeItem.java  NativeItemSet.java  NativeResult.java  NativeTxObserverCallback.java  NativeTxReport.java  NativeTxReportList.java  Query.java  QueryResultListHandler.java  QueryResultRowHandler.java  QueryResultRowsHandler.java  QueryResultValueHandler.java  RelResult.java  RelResultHandler.java  RelResultIterator.java  ResultList.java  ResultListIterator.java  ResultRow.java  ResultRows.java  ResultRowsIterator.java  RustObject.java  ScalarResultHandler.java  Store.java  Toodle.java  TupleResult.java  TupleResultHandler.java  TypedValue.java
android/Toodle/app/src/main/res/layout/: activity_new_item.xml  activity_toodle.xml  item.xml
android/Toodle/gradle/wrapper/: gradle-wrapper.properties
complex/cargo/list/src/: lib.rs
ios/: Cartfile
ios/Toodle.xcodeproj/: project.pbxproj
ios/Toodle/Controllers/: ItemViewController.swift  ToDoListItemsTableViewController.swift  ToDoListLabelsViewController.swift
ios/Toodle/Extensions/: Date+Int64.swift
ios/Toodle/Rust/: Store.swift  ToodleLib.swift  TxReport.swift  items.h  labels.h  store.h  toodle.h
ios/Toodle/Rust/List/Items/: Item.swift
ios/Toodle/Rust/List/Labels/: Label.swift
ios/Toodle/Rust/Store/: OptionalRustObject.swift  Query.swift  RelResult.swift  ResultRow.swift  ResultRows.swift  RustObject.swift  Store.swift  TupleResult.swift  TxReport.swift  TypedValue.swift  store.h
rust/: Cargo.toml  android_build_all.sh  ios_build_all.sh  items.h  labels.h
rust/ffi-utils/src/: lib.rs
rust/list/src/: ctypes.rs  items.rs  lib.rs
rust/src/: ctypes.rs  errors.rs  items.rs  labels.rs  lib.rs  toodle.h  utils.rs
rust/store/: Cargo.toml
rust/store/src/: lib.rs
rust/toodle_ffi/: Cargo.toml  items.h
rust/toodle_ffi/src/: ctypes.rs  lib.rs  utils.rs
toodlext/: .gitignore  Cargo.toml
toodlext/src/: main.rs
webextension/: install-native-manifest.js  native-manifest.json  package-lock.json
webextension/extension/: manifest.json
webextension/src/actions/: api.js  fake_api.js  index.js
webextension/src/components/: App.css  App.js  DatesChooser.js  Todo.css  Todo.js  TodoList.js
webextension/src/reducers/: todos.js
