[package]
name = "toodle_ffi"
version = "0.1.0"
authors = ["Emily Toop <etoop@mozilla.com>"]

[lib]
name = "toodle"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2.32"
time = "0.1.38"
uuid = { version = "0.5", features = ["v4"] }

[dependencies.mentat]
git = "https://github.com/mozilla/mentat.git"
branch = "master"

[dependencies.mentat_ffi]
git = "https://github.com/mozilla/mentat.git"
branch = "master"

[dependencies.toodle]
path = "../"
